2009-02-19  David King  <davidk@openismus.com>

	* src/wswe.c NAME_SORTID: New anonymous enum for column sort ids.
	  (init_main_window): Setup sortable Name column.
	  (sort_place_name): New function to compare two strings for sorting
	place names.

2009-02-18  David King  <davidk@openismus.com>

	* src/wswe.c (hide_add_place_dialog): Add function to hide the add
	a new eating place dialog.
	  (add_place_action): Set default response for the dialog so that
	after hiding, the default button is not lost.
	  (add_place_action_response): Replace hide calls with calls to
	hide_add_place_dialog().
	  (remove_place_action): Fix segfault, forgot to cast pointer to
	a GtkTreePath pointer.

2009-02-18  David King  <davidk@openismus.com>

	* src/wswe.c MainWindowData: Add add_place_dialog,
	add_place_dialog_combobox and add_place_dialog_entry widgets
	to typedef'd struct.
	  (init_main_window): Initialise add_place_dialog.
	  (init_add_place_dialog): Move dialog initialisation code to
	separate function, stop dialog from being modal.
	  (add_place_action): Only show the add_place dialog once.
	  (add_place_action_response): New function to process response
	  from add_place dialog.

2009-02-17  David King  <davidk@openismus.com>

	* src/wswe.c entries: Make const.
	  (get_system_file): Implement using pointer arithmetic, making it a
	lot cleaner.
	  (init_main_window): Stop initialising pointers to { 0, }. Use
	G_N_ENTRIES macro to determine length of const entries array at
	compile time. Initialise text cell renderers before they are used.
	Move g_set_application_name() and gtk_window_set_default_icon_name()
	calls to main().
	  (price_cell_data_func): Use g_strdup_printf() rather than
	g_snprintf().
	  (add_place_action): Use gtk_dialog_get_content_area() rather than
	getting the vbox from the GtkDialog private struct. Don't use
	g_ascii_strcasecmp() when it's not needed.
	  (remove_place_action): Still seglfaults.